force-app/main/default/objects/Application__c/fields/A3EndDate__c.field-meta.xml
<CustomField>
    <fullName>A3EndDate__c</fullName>
    <description>The date when application status moves out from A3</description>
    <label>A3 End Date</label>
    <type>DateTime</type>
</CustomField>