force-app/main/default/objects/Application__c/fields/A3ProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>A3ProcessingTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>A3 Processing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>