force-app/main/default/objects/Application__c/fields/A3StartDate__c.field-meta.xml
<CustomField>
    <fullName>A3StartDate__c</fullName>
    <description>The date when application status moves to A3</description>
    <label>A3 Start Date</label>
    <type>DateTime</type>
</CustomField>