force-app/main/default/objects/Application__c/fields/AccountInformation__c.field-meta.xml
<CustomField>
    <fullName>AccountInformation__c</fullName>
    <description>PacPoint-MV090519 - Created for PVL phase 1. To be used when doing Application Lookup Search</description>
    <label>Account Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>