force-app/main/default/objects/Application__c/fields/AccountOutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>AccountOutstandingAmount__c</fullName>
    <description>PacPoint-KN010220-Created for PVL Sprint 3 Phase 1</description>
    <formula>Applicant__r.OutstandingAmountOwed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount owed by the account</inlineHelpText>
    <label>Account Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>