force-app/main/default/objects/Application__c/fields/ActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactive__c</fullName>
    <description>PacPoint-KN091319 - Created for PVL Phase 1</description>
    <inlineHelpText>Shows if the application is Active or Inactive.</inlineHelpText>
    <label>Active/Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>