force-app/main/default/objects/Application__c/fields/ActiveInactiveFormula__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactiveFormula__c</fullName>
    <formula>IF(
TEXT(ActiveInactive__c) = &quot;Inactive&quot;, 
&quot;Inactive&quot;, 
&quot;Active&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Inactive Formula</label>
    <type>Text</type>
</CustomField>