force-app/main/default/objects/Application__c/fields/ADADecisionDate__c.field-meta.xml
<CustomField>
    <fullName>ADADecisionDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>ADA Decision Date</label>
    <type>Date</type>
</CustomField>