force-app/main/default/objects/Application__c/fields/ADARequestDate__c.field-meta.xml
<CustomField>
    <fullName>ADARequestDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>ADA Request Date</label>
    <type>Date</type>
</CustomField>