force-app/main/default/objects/Application__c/fields/ADARequestDecision__c.field-meta.xml
<CustomField>
    <fullName>ADARequestDecision__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>ADA Request Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>