force-app/main/default/objects/Application__c/fields/ADARequestRemarks__c.field-meta.xml
<CustomField>
    <fullName>ADARequestRemarks__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>ADA Request Remarks</label>
    <type>TextArea</type>
</CustomField>