force-app/main/default/objects/Application__c/fields/AddDurationonButtons__c.field-meta.xml
<CustomField>
    <fullName>AddDurationonButtons__c</fullName>
    <description>PacPoint-MV11819 - Created for PVL phase 1 to be able to do a filter on the process builder Update.</description>
    <formula>LicenseType__r.AddDurationonButtons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Duration on Buttons</label>
    <type>Checkbox</type>
</CustomField>