force-app/main/default/objects/Application__c/fields/AffidavitofApplicantSignature_Date__c.field-meta.xml
<CustomField>
    <fullName>AffidavitofApplicantSignature_Date__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Affidavit of Applicant Signature Date</label>
    <type>Date</type>
</CustomField>