force-app/main/default/objects/Application__c/fields/ALIASExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ALIASExpirationDate__c</fullName>
    <label>ALIAS Expiration Date</label>
    <type>Date</type>
</CustomField>