force-app/main/default/objects/Application__c/fields/ALIASLicenseEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ALIASLicenseEffectiveDate__c</fullName>
    <label>ALIAS License Effective Date</label>
    <type>Date</type>
</CustomField>