force-app/main/default/objects/Application__c/fields/ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantName__c</fullName>
    <description>PacPoint-MV100519 - Created for PVL phase 1 to be used on searches on lookups due the salesforce limitation that doesn&apos;t allow searches on lookups fields.</description>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>