force-app/main/default/objects/Application__c/fields/ApplicantNameText__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNameText__c</fullName>
    <description>Used to place the applicant name for the application 
PacPoint-AZ121419 - Created for PVL phase 1. used in the Doc Generator Settings.</description>
    <formula>IF(
Applicant__r.RecordType.DeveloperName = &apos;BusinessAccount&apos;,
Applicant__r.Name ,
Applicant__r.FirstName &amp; &quot; &quot;&amp;Applicant__r.MiddleName &amp;&quot; &quot;&amp; Applicant__r.LastName &amp; &quot; &quot; &amp;  Applicant__r.Suffix 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>