force-app/main/default/objects/Application__c/fields/ApplicationCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCode__c</fullName>
    <description>PacPoint-KN06042020-Created for PVL Phase 1 Sprint 4</description>
    <label>Application Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE - BROKER EXPERIENCE CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>BR - BROKER - INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>CEC - CONTINUING EDUCATION COURSE</fullName>
            </value>
            <value>
                <fullName>CEE - CONTINUING EDUCATION EQUIVALENCY</fullName>
            </value>
            <value>
                <fullName>CEP - CONTINUING EDUCATION PROVIDER</fullName>
            </value>
            <value>
                <fullName>CF - CHANGE FORM</fullName>
            </value>
            <value>
                <fullName>CHO - CONDOMINIUM HOTEL OPERATOR</fullName>
            </value>
            <value>
                <fullName>CHR -CONDOMINIUM HOTEL OPERATOR REREGISTRATION</fullName>
            </value>
            <value>
                <fullName>CMA - CONDOMINIUM MANAGING AGENT</fullName>
            </value>
            <value>
                <fullName>CMR - CONDOMINIUM MANAGING AGENT REREGISTRATION</fullName>
            </value>
            <value>
                <fullName>CORP - CORPORATION</fullName>
            </value>
            <value>
                <fullName>EW - PRELICENSE EDUCATION EQUIVALENCY</fullName>
            </value>
            <value>
                <fullName>LH - LICENSE VERIFICATION</fullName>
            </value>
            <value>
                <fullName>LLC - LIMITED LIABILITY COMPANY</fullName>
            </value>
            <value>
                <fullName>LLP - LIMITED LIABILITY PARTNERSHIP</fullName>
            </value>
            <value>
                <fullName>OO - OWNER OCCUPANT</fullName>
            </value>
            <value>
                <fullName>PAR - PARTNERSHIP</fullName>
            </value>
            <value>
                <fullName>PI - PRELICENSE INSTRUCTOR</fullName>
            </value>
            <value>
                <fullName>PIC - PRELICENSE INDEPENDENT COURSE</fullName>
            </value>
            <value>
                <fullName>PII - PRELICENSE INDEPENDENT INSTRUCTOR</fullName>
            </value>
            <value>
                <fullName>PRE - PRELIMINARY DECISION</fullName>
            </value>
            <value>
                <fullName>PS - PRELICENSE SCHOOL</fullName>
            </value>
            <value>
                <fullName>RBO - BRANCH OFFICE</fullName>
            </value>
            <value>
                <fullName>RBR - BROKER RENEWAL</fullName>
            </value>
            <value>
                <fullName>REI - REINSTATEMENT</fullName>
            </value>
            <value>
                <fullName>RES - RESTORATION</fullName>
            </value>
            <value>
                <fullName>SO - SOLE PROPRIETOR</fullName>
            </value>
            <value>
                <fullName>SP - SALESPERSON</fullName>
            </value>
            <value>
                <fullName>SPR - SALESPERSON RENEWAL</fullName>
            </value>
            <value>
                <fullName>TN - TRADE NAME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>