force-app/main/default/objects/Application__c/fields/ApplicationEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEffectiveDate__c</fullName>
    <description>PacPoint-KN12222020-Created for PVL Phase 1</description>
    <inlineHelpText>To be used for ADDP/LICF/REAC License History.</inlineHelpText>
    <label>Application Effective Date</label>
    <type>Date</type>
</CustomField>