force-app/main/default/objects/Application__c/fields/ApplicationProcessingBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>ApplicationProcessingBusinessDays__c</fullName>
    <formula>IF(ISNULL(

(5 * ( FLOOR( ( DATEVALUE(PhaseHStartDate__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(PhaseHStartDate__c) - DATE( 1900, 1, 8), 7 ) ) )

-

(5 * ( FLOOR( ( ApplicationReceivedDate__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( ApplicationReceivedDate__c - DATE( 1900, 1, 8), 7 ) ) )


) , 0, 

(5 * ( FLOOR( ( DATEVALUE(PhaseHStartDate__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(PhaseHStartDate__c) - DATE( 1900, 1, 8), 7 ) ) )

-

(5 * ( FLOOR( ( ApplicationReceivedDate__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( ApplicationReceivedDate__c - DATE( 1900, 1, 8), 7 ) ) )
 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Processing (Business Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>