force-app/main/default/objects/Application__c/fields/ApplicationProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>ApplicationProcessingTime__c</fullName>
    <formula>DATEVALUE(PhaseHStartDate__c) - ApplicationReceivedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>