force-app/main/default/objects/Application__c/fields/ApplicationReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceivedDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>When the application was created in Salesforce</inlineHelpText>
    <label>Application Received Date</label>
    <type>Date</type>
</CustomField>