force-app/main/default/objects/Application__c/fields/ApplicationReceivedQuarter__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceivedQuarter__c</fullName>
    <formula>TEXT(YEAR(ApplicationReceivedDate__c))

+

&quot; - &quot;

+


CASE(TEXT(MONTH(ApplicationReceivedDate__c)), 

&quot;1&quot;, &quot;1st Quarter&quot;, 
&quot;2&quot;, &quot;1st Quarter&quot;,

&quot;3&quot;, &quot;1st Quarter&quot; ,
&quot;4&quot;, &quot;2nd Quarter&quot;,
&quot;5&quot;, &quot;2nd Quarter&quot;,
&quot;6&quot;, &quot;2nd Quarter&quot;,
&quot;7&quot;, &quot;3rd Quarter&quot;,
&quot;8&quot;, &quot;3rd Quarter&quot;,
&quot;9&quot;, &quot;3rd Quarter&quot;,
&quot;10&quot;, &quot;4th Quarter&quot;,
&quot;11&quot;, &quot;4th Quarter&quot;,
&quot;12&quot;, &quot;4th Quarter&quot;,

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Received - Quarter</label>
    <type>Text</type>
</CustomField>