force-app/main/default/objects/Application__c/fields/ApplicationReceivedYear__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceivedYear__c</fullName>
    <formula>TEXT(YEAR(ApplicationReceivedDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Received - Year</label>
    <type>Text</type>
</CustomField>