force-app/main/default/objects/Application__c/fields/ApplicationRenewingInactive__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRenewingInactive__c</fullName>
    <formula>IF(
AND(
TEXT(ActiveInactive__c) = &apos;Inactive&apos;,
TEXT(CurrentLicense__r.ActiveInactive__c) = &apos;Active&apos;), 
true, 
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Renewing Inactive?</label>
    <type>Checkbox</type>
</CustomField>