force-app/main/default/objects/Application__c/fields/ApplicationRespondbyDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRespondbyDate__c</fullName>
    <description>PacPoint-KN04242020-Created for PVL Phase 1 Sprint 3</description>
    <inlineHelpText>This is the date that LB has to respond to this Application. This is used specifically for Timeshare and Subdivision.</inlineHelpText>
    <label>Application Respond by Date</label>
    <type>Date</type>
</CustomField>