force-app/main/default/objects/Application__c/fields/ApplyforTemporaryPermit__c.field-meta.xml
<CustomField>
    <fullName>ApplyforTemporaryPermit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint JF 1/9/25: Created to indicate whether the applicants want to apply for temporary permit or not</description>
    <label>Apply for Temporary Permit</label>
    <type>Checkbox</type>
</CustomField>