force-app/main/default/objects/Application__c/fields/ApprovedforLicensureDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovedforLicensureDate__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <inlineHelpText>The date on which the Application Status changes to L1.</inlineHelpText>
    <label>Approved for Licensure Date</label>
    <type>Date</type>
</CustomField>