force-app/main/default/objects/Application__c/fields/AssociatedLicenseEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>AssociatedLicenseEffectiveDate__c</fullName>
    <formula>Case(TEXT(Type__c),
&apos;LICN - New License&apos;, DateofLicensure__c,
&apos;LICF - New License after Forfeiture&apos;, ApplicationEffectiveDate__c,
&apos;REAC - Reactivation&apos;, ApplicationEffectiveDate__c,
&apos;RSTR - Restore - No A/I Status&apos;, TODAY(), 
&apos;DUAL - Dual (Sole/RME or RME/RME or RME/Sole)&apos;, ApplicationEffectiveDate__c,
&apos;R2DBA - RME to Sole Owner&apos;, ApplicationEffectiveDate__c, 
&apos;RB2SO - RB to Sole Owner&apos;, ApplicationEffectiveDate__c, 
Null

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated License Effective Date</label>
    <type>Date</type>
</CustomField>