force-app/main/default/objects/Application__c/fields/Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Autonumber__c</fullName>
    <description>PacPoint-MV080919 - Created for PVL phase 1</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Autonumber</label>
    <type>AutoNumber</type>
</CustomField>