force-app/main/default/objects/Application__c/fields/BALicenseRevocation__c.field-meta.xml
<CustomField>
    <fullName>BALicenseRevocation__c</fullName>
    <label>BA License Revocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>