force-app/main/default/objects/Application__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>PacPoint-KN08142020-Created for PVL Phase 1</description>
    <formula>Applicant__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required for all medical license types</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>