force-app/main/default/objects/Application__c/fields/BoardApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>BoardApprovalDate__c</fullName>
    <inlineHelpText>The Date Board Approval was received.</inlineHelpText>
    <label>Board Approval Date</label>
    <type>Date</type>
</CustomField>