force-app/main/default/objects/Application__c/fields/BoardMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>BoardMeetingDate__c</fullName>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <inlineHelpText>The date of the scheduled board meeting. If there is no board meeting this field will be blank.</inlineHelpText>
    <label>Board Meeting Date</label>
    <type>Date</type>
</CustomField>