force-app/main/default/objects/Application__c/fields/BoardProgramName__c.field-meta.xml
<CustomField>
    <fullName>BoardProgramName__c</fullName>
    <description>PacPoint-KN03192020-Created for PVL Phase 1 Sprint 3</description>
    <formula>LicenseType__r.BoardProgram__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Program Name</label>
    <type>Text</type>
</CustomField>