force-app/main/default/objects/Application__c/fields/BondWaiver__c.field-meta.xml
<CustomField>
    <fullName>BondWaiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN03102020 - Created for PVL Sprint 3 Phase 1</description>
    <label>Bond Waiver</label>
    <type>Checkbox</type>
</CustomField>