force-app/main/default/objects/Application__c/fields/BoothStreet__c.field-meta.xml
<CustomField>
    <fullName>BoothStreet__c</fullName>
    <description>PacPoint-DN06022020-Created for PVL Sprint 4 Phase 1</description>
    <label>Booth Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>