force-app/main/default/objects/Application__c/fields/BoothZipCode__c.field-meta.xml
<CustomField>
    <fullName>BoothZipCode__c</fullName>
    <description>PacPoint-DN06022020-Created for PVL Sprint 4 Phase 1</description>
    <label>Booth Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>