force-app/main/default/objects/Application__c/fields/BouncedCheckDate__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckDate__c</fullName>
    <label>Bounced Check Date</label>
    <type>Date</type>
</CustomField>