force-app/main/default/objects/Application__c/fields/BouncedCheckMaintenanceType__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckMaintenanceType__c</fullName>
    <formula>CASE(TEXT(Type__c), &quot;RNEW - Renewal&quot;, &quot;BCRN - BOUNCED CHECK - RENEWAL&quot;, &quot;RSTR - Restore - No A/I Status&quot;, &quot;BCRS - BOUNCED CHECK - RESTORATION&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounced Check Maintenance Type</label>
    <type>Text</type>
</CustomField>