force-app/main/default/objects/Application__c/fields/BouncedCheckonClosedRenewal__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckonClosedRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced Check on Closed Renewal</label>
    <type>Checkbox</type>
</CustomField>