force-app/main/default/objects/Application__c/fields/BouncedCheckonNewLicense__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckonNewLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced Check</label>
    <type>Checkbox</type>
</CustomField>