force-app/main/default/objects/Application__c/fields/BouncedCheckonOpenRenewal__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckonOpenRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced Check on Open Renewal</label>
    <type>Checkbox</type>
</CustomField>