force-app/main/default/objects/Application__c/fields/BusinessCity__c.field-meta.xml
<CustomField>
    <fullName>BusinessCity__c</fullName>
    <description>PacPoint-KN081819 - Created for PVL Phase 1</description>
    <label>Business City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>