force-app/main/default/objects/Application__c/fields/BusinessStreet__c.field-meta.xml
<CustomField>
    <fullName>BusinessStreet__c</fullName>
    <description>PacPoint-KN101719-Created for PVL Sprint 1 Phase 1</description>
    <label>Business Street</label>
    <type>TextArea</type>
</CustomField>