force-app/main/default/objects/Application__c/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For REB inactivation job to bypass the deficiencies</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>