force-app/main/default/objects/Application__c/fields/CandidateId__c.field-meta.xml
<CustomField>
    <fullName>CandidateId__c</fullName>
    <formula>Applicant__r.AccountSequenceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Id</label>
    <type>Text</type>
</CustomField>