force-app/main/default/objects/Application__c/fields/CC_Applicant_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Date__c</fullName>
    <label>Applicant Date</label>
    <type>Date</type>
</CustomField>