force-app/main/default/objects/Application__c/fields/CC_Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Phone__c</fullName>
    <label>Applicant Phone</label>
    <type>Phone</type>
</CustomField>