force-app/main/default/objects/Application__c/fields/CC_Applicant_Signature__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Signature__c</fullName>
    <label>Applicant Signature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>