force-app/main/default/objects/Application__c/fields/CEisConfirmed__c.field-meta.xml
<CustomField>
    <fullName>CEisConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE is Confirmed</label>
    <type>Checkbox</type>
</CustomField>