force-app/main/default/objects/Application__c/fields/CGFNSDate__c.field-meta.xml
<CustomField>
    <fullName>CGFNSDate__c</fullName>
    <label>CGFNS Date</label>
    <type>Date</type>
</CustomField>