force-app/main/default/objects/Application__c/fields/CGFNSID__c.field-meta.xml
<CustomField>
    <fullName>CGFNSID__c</fullName>
    <label>CGFNS ID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>