force-app/main/default/objects/Application__c/fields/CheckoutFormVersion__c.field-meta.xml
<CustomField>
    <fullName>CheckoutFormVersion__c</fullName>
    <formula>IF(
  ISPICKVAL(Type__c, &quot;LICN - New License&quot;), 
&quot;CTCheckoutForm&quot;, 
&quot;CTCheckoutForm&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkout Form Version</label>
    <type>Text</type>
</CustomField>