force-app/main/default/objects/Application__c/fields/ClaimsofMalpractice__c.field-meta.xml
<CustomField>
    <fullName>ClaimsofMalpractice__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years with regard to professional liability, participation in any health plan or federal or state health care program:
a) Have any claims of malpractice ever been filed against you?</inlineHelpText>
    <label>Claims of Malpractice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>