force-app/main/default/objects/Application__c/fields/ClientTrustAccountAccountNumProvi__c.field-meta.xml
<CustomField>
    <fullName>ClientTrustAccountAccountNumProvi__c</fullName>
    <inlineHelpText>I have provided the department with the account number and the name of the financial institution at which my client trust account is held.</inlineHelpText>
    <label>Client Trust Account Account Num Provi.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>