force-app/main/default/objects/Application__c/fields/CompleteApplicationBy__c.field-meta.xml
<CustomField>
    <fullName>CompleteApplicationBy__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The date on which the Application must be completed or else it will be considered Abandoned.</inlineHelpText>
    <label>Complete Application By</label>
    <type>Date</type>
</CustomField>