force-app/main/default/objects/Application__c/fields/CompleteExamBy__c.field-meta.xml
<CustomField>
    <fullName>CompleteExamBy__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The Applicant has until this date to complete the Exam</inlineHelpText>
    <label>Complete Exam By</label>
    <type>Date</type>
</CustomField>