force-app/main/default/objects/Application__c/fields/CompleteExamByFormula__c.field-meta.xml
<CustomField>
    <fullName>CompleteExamByFormula__c</fullName>
    <formula>If(
NOT(ISNULL(CompleteExamBy__c)),
CompleteExamBy__c,
CompleteApplicationBy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Exam By Formula</label>
    <type>Date</type>
</CustomField>