force-app/main/default/objects/Application__c/fields/CompleteExamByRemarks__c.field-meta.xml
<CustomField>
    <fullName>CompleteExamByRemarks__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>If the Applicant is given an extension to take the Exam, please capture remarks indicating why.</inlineHelpText>
    <label>Complete Exam By Remarks</label>
    <type>TextArea</type>
</CustomField>