force-app/main/default/objects/Application__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN06092020-Created for PVL Phase 1 Sprint 4</description>
    <label>Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Consultant)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>