force-app/main/default/objects/Application__c/fields/ConvictedofaCrimeAttestation__c.field-meta.xml
<CustomField>
    <fullName>ConvictedofaCrimeAttestation__c</fullName>
    <inlineHelpText>During the past two years, have you been convicted of a crime in which the conviction has not been annulled or expunged?</inlineHelpText>
    <label>Convicted of a Crime - Attestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>