force-app/main/default/objects/Application__c/fields/ConvictedOfInsuranceFraud__c.field-meta.xml
<CustomField>
    <fullName>ConvictedOfInsuranceFraud__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years with regard to professional liability, participation in any health plan or federal or state health care program:
d) Have you ever been convicted of insurance fraud?</inlineHelpText>
    <label>Convicted Of Insurance Fraud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>