force-app/main/default/objects/Application__c/fields/CopyResidenceAddress__c.field-meta.xml
<CustomField>
    <fullName>CopyResidenceAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN01162020-Created for PVL Phase 1 Sprint 3</description>
    <label>Copy Residence Address</label>
    <type>Checkbox</type>
</CustomField>